--- a/templates/comment_single.html
+++ b/templates/comment_single.html
@@ -14,7 +14,9 @@
                     {% else %}
                         <span class="font-bold text-gray-800">{{ comment.name }}</span>
                     {% endif %}
+                    {% if comment.date %}
                     <span class="text-sm text-gray-500 ml-2">{{ comment.date.strftime('%d %B %Y alle %H:%M') }}</span>
+                    {% endif %}
                 </div>
                 <button class="reply-btn text-sm font-medium text-blue-600 hover:underline" data-comment-id="{{ comment.id }}" data-comment-author="{{ comment.name }}">
                     Rispondi
