--- a/templates/comment_single.html
+++ b/templates/comment_single.html
@@ -1,9 +1,10 @@
+{% if comment and comment.id and comment.name is defined and comment.message is defined %}
 <div id="comment-{{ comment.id }}" class="comment bg-white p-4 rounded-lg shadow-sm {% if comment.parent_id %}ml-8 md:ml-12{% endif %}">
     <div class="flex items-start">
         <div class="flex-shrink-0 mr-4">
             <!-- Placeholder for an avatar -->
             <div class="w-10 h-10 rounded-full bg-gray-200 flex items-center justify-center">
-                <span class="text-lg font-bold text-gray-500">{{ comment.name[0] }}</span>
+                <span class="text-lg font-bold text-gray-500">{{ comment.name[0] if comment.name else '?' }}</span>
             </div>
         </div>
         <div class="flex-grow">
@@ -32,8 +33,15 @@
     {% if comment.children %}
         <div class="children mt-4 space-y-4">
             {% for child in comment.children %}
-                {% include 'comment_single.html' with comment=child %}
+                {% with comment=child %}
+                    {% include 'comment_single.html' %}
+                {% endwith %}
             {% endfor %}
         </div>
     {% endif %}
 </div>
+{% else %}
+<div class="comment bg-red-100 p-4 rounded-lg shadow-sm">
+    <p class="text-red-800">Could not display this comment due to a data error.</p>
+</div>
+{% endif %}
